# herbalist-mcp

./: Cargo.toml  README.md  TECHNICAL.md  deny.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
sample-vault/: Index.md
sample-vault/Categories/: Adaptogens.md  Anti-inflammatory Herbs.md  Nervines.md
sample-vault/Herbs/: Chamomile.md  Echinacea.md  Elderberry.md  Ginger.md  Lavender.md  Peppermint.md  Turmeric.md  Valerian.md
sample-vault/Preparations/: Salves and Poultices.md  Teas and Infusions.md  Tinctures.md
src/: config.rs  main.rs
src/db/: mod.rs
src/embeddings/: cleora.rs  mod.rs
src/indexer/: chunker.rs  frontmatter.rs  mod.rs  roles.rs  wikilinks.rs
src/mcp/: mod.rs  tools.rs
