[package]
name = "herbalist-mcp"
version = "0.2.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "herbalist-mcp"
path = "src/main.rs"

[dependencies]
rmcp        = { git = "https://github.com/modelcontextprotocol/rust-sdk", package = "rmcp", features = ["server", "transport-io"] }
rusqlite    = { version = "0.31", features = ["bundled"] }
fastembed   = "4"
clap        = { version = "4", features = ["derive", "env"] }
tokio       = { version = "1", features = ["full"] }
rayon       = "1"
ignore      = "0.4"
notify      = "6"
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
sha2        = "0.10"
hex         = "0.4"
dirs        = "5"
regex       = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
